--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions  {
+
+        exclude 'META-INF/LICENSE'
+    }
+
 }
 
 dependencies {
@@ -35,4 +41,8 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.youth.banner:banner:1.4.5'
+    compile 'com.android.support:palette-v7:24.2.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.wilddog.client:wilddog-auth-android:2.0.3'
+    compile 'com.wilddog.client:wilddog-sync-android:2.0.3'
 }
