--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.wilddog.client:wilddog-auth-android:2.0.3'
     compile 'com.wilddog.client:wilddog-sync-android:2.0.3'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
 }
