--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.wilddog.client:wilddog-auth-android:2.0.3'
     compile 'com.wilddog.client:wilddog-sync-android:2.0.3'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
 }
